istio/timeout-retry/shipping-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs.shipping
spec:
  hosts:
  - shipping
  http:
  - route:
    - destination:
        host: shipping
        subset: v1
    fault:
      abort:
        percentage:
          value: 50.0
        httpStatus: 503
      # uncomment to test timeout in orders service
      # delay:
      #   fixedDelay: 3s
      #   percent: 50
